/**
 * Copyright (C) 2016-2019 Lightbend Inc. <https://www.lightbend.com>
 */

syntax = "proto2";

package com.lightbend.lagom.internal.scaladsl.persistence;

option java_package = "com.lightbend.lagom.internal.scaladsl.persistence.protobuf.msg";
option optimize_for = SPEED;

message CommandEnvelope {
  required string entityId = 1;
  required bytes enclosedMessage = 2;
  required int32 serializerId = 3;
  optional bytes messageManifest = 4;
}

message Exception {
  optional string message = 1;
}

message EnsureActive {
  required string entityId = 1;
}



